--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.1",
     "concurrently": "^4.1.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "json-server": "^0.15.1",
+    "massive": "^6.7.1",
     "react": "^16.3",
-    "react-dom": "^16.3"
+    "react-dom": "^16.3",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.11"
